Add ESP ROM CRC and fallbacks to HAL

--- a/esp-hal-common/devices/esp32.toml
+++ b/esp-hal-common/devices/esp32.toml
@@ -58,6 +58,10 @@ peripherals = [
     "wifi",
     "psram",
 
+    # ROM capabilities
+    "rom_crc_le",
+    "rom_crc_be",
+
     # Wakeup SOC based on ESP-IDF:
     "pm_support_ext0_wakeup",
     "pm_support_ext1_wakeup",
