--- a/esp-hal-common/devices/esp32c6.toml
+++ b/esp-hal-common/devices/esp32c6.toml
@@ -80,6 +80,10 @@ peripherals = [
     "wifi",
     "ieee802154",
 
+    # ROM capabilities
+    "rom_crc_le",
+    "rom_crc_be",
+
     # Wakeup SOC based on ESP-IDF:
     "pm_support_wifi_wakeup",
     "pm_support_beacon_wakeup",
