--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -30,6 +30,7 @@ procmacros           = { version = "0.5.0", package = "esp-hal-procmacros", path
 strum                = { version = "0.24.1", default-features = false, features = ["derive"] }
 void                 = { version = "1.0.2", default-features = false }
 usb-device           = { version = "0.2.9", optional = true }
+esp-println       = { version = "0.5.0", features = ["esp32c6"] }
 
 # async
 embedded-hal-async = { version = "0.2.0-alpha.1", optional = true }
