--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -54,7 +54,7 @@ ufmt-write = { version = "0.1.0", optional = true }
 esp32   = { version = "0.23.0", features = ["critical-section"], optional = true }
 esp32c2 = { version = "0.11.0", features = ["critical-section"], optional = true }
 esp32c3 = { version = "0.14.0", features = ["critical-section"], optional = true }
-esp32c6 = { version = "0.4.0",  features = ["critical-section"], optional = true }
+esp32c6 = { git = "https://github.com/SergioGasquez/esp-pacs", branch = "feature/c6-pcr", package = "esp32c6", features = ["critical-section"], optional = true }
 esp32h2 = { git = "https://github.com/esp-rs/esp-pacs", rev = "5ff82e4", package = "esp32h2", features = ["critical-section"], optional = true }
 esp32s2 = { version = "0.14.0", features = ["critical-section"], optional = true }
 esp32s3 = { version = "0.18.0", features = ["critical-section"], optional = true }
