--- a/esp32c2-hal/Cargo.toml
+++ b/esp32c2-hal/Cargo.toml
@@ -45,6 +45,7 @@ static_cell       = "1.0.0"
 
 [features]
 default              = ["rt", "vectored", "xtal40mhz"]
+debug                = ["esp-hal-common/debug"]
 direct-boot          = ["esp-hal-common/rv-init-data"]
 eh1                  = ["esp-hal-common/eh1", "dep:embedded-hal-1", "dep:embedded-hal-nb"]
 rt                   = []
