--- a/esp32s2-hal/Cargo.toml
+++ b/esp32s2-hal/Cargo.toml
@@ -53,6 +53,7 @@ usbd-serial       = "0.1.1"
 
 [features]
 default   = ["rt", "vectored"]
+debug     = ["esp-hal-common/debug"]
 eh1       = ["esp-hal-common/eh1", "dep:embedded-hal-1", "dep:embedded-hal-nb"]
 rt        = []
 ufmt      = ["esp-hal-common/ufmt"]
