--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -51,13 +51,13 @@ ufmt-write = { version = "0.1.0", optional = true }
 # IMPORTANT:
 # Each supported device MUST have its PAC included below along with a
 # corresponding feature.
-esp32   = { version = "0.23.0", features = ["critical-section"], optional = true }
-esp32c2 = { version = "0.11.0", features = ["critical-section"], optional = true }
-esp32c3 = { version = "0.14.0", features = ["critical-section"], optional = true }
-esp32c6 = { git = "https://github.com/esp-rs/esp-pacs", rev = "1b88c54", package = "esp32c6", features = ["critical-section"], optional = true }
-esp32h2 = { git = "https://github.com/esp-rs/esp-pacs", rev = "5ff82e4", package = "esp32h2", features = ["critical-section"], optional = true }
-esp32s2 = { version = "0.14.0", features = ["critical-section"], optional = true }
-esp32s3 = { version = "0.18.0", features = ["critical-section"], optional = true }
+esp32   = { version = "0.24.0", features = ["critical-section"], optional = true }
+esp32c2 = { version = "0.12.0", features = ["critical-section"], optional = true }
+esp32c3 = { version = "0.15.0", features = ["critical-section"], optional = true }
+esp32c6 = { version = "0.5.0",  features = ["critical-section"], optional = true }
+esp32h2 = { version = "0.1.0",  features = ["critical-section"], optional = true }
+esp32s2 = { version = "0.15.0", features = ["critical-section"], optional = true }
+esp32s3 = { version = "0.19.0", features = ["critical-section"], optional = true }
 
 [build-dependencies]
 basic-toml = "0.1.2"
@@ -108,3 +108,14 @@ xtensa = ["critical-section/restore-state-u32", "procmacros/xtensa"]
 rv-init-data     = ["esp-riscv-rt/init-data", "esp-riscv-rt/init-rw-text"]
 rv-zero-rtc-bss  = ["esp-riscv-rt/zero-rtc-fast-bss"]
 rv-init-rtc-data = ["esp-riscv-rt/init-rtc-fast-data", "esp-riscv-rt/init-rtc-fast-text"]
+
+# Enable the `impl-register-debug` feature for the selected PAC
+debug = [
+    "esp32?/impl-register-debug",
+    "esp32c2?/impl-register-debug",
+    "esp32c3?/impl-register-debug",
+    "esp32c6?/impl-register-debug",
+    "esp32h2?/impl-register-debug",
+    "esp32s2?/impl-register-debug",
+    "esp32s3?/impl-register-debug",
+]
