--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -100,6 +100,7 @@ embassy-time-timg0   = []
 
 interrupt-preemption = []
 
+
 # Architecture-specific features (intended for internal use)
 riscv  = ["critical-section/restore-state-u8",  "procmacros/riscv", "esp-riscv-rt", "riscv-atomic-emulation-trap", "esp-riscv-rt/zero-bss"]
 xtensa = ["critical-section/restore-state-u32", "procmacros/xtensa"]
@@ -108,3 +109,5 @@ xtensa = ["critical-section/restore-state-u32", "procmacros/xtensa"]
 rv-init-data     = ["esp-riscv-rt/init-data", "esp-riscv-rt/init-rw-text"]
 rv-zero-rtc-bss  = ["esp-riscv-rt/zero-rtc-fast-bss"]
 rv-init-rtc-data = ["esp-riscv-rt/init-rtc-fast-data", "esp-riscv-rt/init-rtc-fast-text"]
+
+direct-vectoring = ["esp-riscv-rt/direct-vectoring"]
