--- a/esp-riscv-rt/Cargo.toml
+++ b/esp-riscv-rt/Cargo.toml
@@ -18,6 +18,7 @@ panic-halt = "0.2.0"
 
 [features]
 direct-vectoring = []
+direct-vectoring-esp32c6 = []
 has-mie-mip = []
 zero-bss = []
 zero-rtc-fast-bss = []
