--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -123,6 +123,8 @@ jobs:
         run: cd esp32c2-hal/ && cargo +nightly check --example=embassy_i2c --features=embassy,embassy-time-systick,async
       - name: check esp32c2-hal (interrupt-preemption)
         run: cd esp32c2-hal/ && cargo check --example=interrupt_preemption --features=interrupt-preemption
+      - name: check esp32c2-hal (direct-vectoring)
+        run: cd esp32c2-hal/ && cargo check --example=direct-vectoring --features=direct-vectoring
 
   esp32c3-hal:
     runs-on: ubuntu-latest
@@ -164,6 +166,8 @@ jobs:
         run: cd esp32c3-hal/ && cargo +nightly check --example=embassy_i2c --features=embassy,embassy-time-systick,async
       - name: check esp32c3-hal (interrupt-preemption)
         run: cd esp32c3-hal/ && cargo check --example=interrupt_preemption --features=interrupt-preemption
+      - name: check esp32c3-hal (direct-vectoring)
+        run: cd esp32c3-hal/ && cargo check --example=direct-vectoring --features=direct-vectoring
 
   esp32c6-hal:
     runs-on: ubuntu-latest
@@ -203,6 +207,8 @@ jobs:
         run: cd esp32c6-hal/ && cargo +nightly check --example=embassy_i2c --features=embassy,embassy-time-systick,async
       - name: check esp32c6-hal (interrupt-preemption)
         run: cd esp32c6-hal/ && cargo check --example=interrupt_preemption --features=interrupt-preemption
+      - name: check esp32c6-hal (direct-vectoring)
+        run: cd esp32c6-hal/ && cargo check --example=direct-vectoring --features=direct-vectoring
 
   esp32h2-hal:
     runs-on: ubuntu-latest
