Remove unnecessary `riscv` and `xtensa` features from proc macro crate

--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -105,8 +105,8 @@ embassy-time-timg0   = []
 interrupt-preemption = []
 
 # Architecture-specific features (intended for internal use)
-riscv  = ["critical-section/restore-state-u8",  "procmacros/riscv", "esp-riscv-rt", "riscv-atomic-emulation-trap", "esp-riscv-rt/zero-bss"]
-xtensa = ["critical-section/restore-state-u32", "procmacros/xtensa"]
+riscv  = ["critical-section/restore-state-u8", "esp-riscv-rt", "esp-riscv-rt/zero-bss", "riscv-atomic-emulation-trap"]
+xtensa = ["critical-section/restore-state-u32"]
 
 # Initialize / clear data sections and RTC memory
 rv-init-data     = ["esp-riscv-rt/init-data", "esp-riscv-rt/init-rw-text"]
