--- a/esp-hal-procmacros/Cargo.toml
+++ b/esp-hal-procmacros/Cargo.toml
@@ -12,24 +12,20 @@ repository   = "https://github.com/esp-rs/esp-hal"
 license      = "MIT OR Apache-2.0"
 
 [package.metadata.docs.rs]
-features = ["esp32c3", "interrupt", "riscv"]
+features = ["esp32c3", "interrupt"]
 
 [lib]
 proc-macro = true
 
 [dependencies]
-darling          = "0.14.4"
+darling          = "0.20.1"
 proc-macro-crate = "1.3.1"
 proc-macro-error = "1.0.4"
 proc-macro2      = "1.0.53"
 quote            = "1.0.26"
-syn              = {version = "1.0.109", features = ["extra-traits", "full"]}
+syn              = {version = "2.0.22", features = ["extra-traits", "full"]}
 
 [features]
-interrupt = []
-riscv     = []
-rtc_slow  = []
-xtensa    = []
 esp32     = []
 esp32c2   = []
 esp32c3   = []
@@ -37,3 +33,6 @@ esp32c6   = []
 esp32h2   = []
 esp32s2   = []
 esp32s3   = []
+
+interrupt = []
+rtc_slow  = []
