--- a/esp-wifi/Cargo.toml
+++ b/esp-wifi/Cargo.toml
@@ -31,7 +31,6 @@ num-traits = { workspace = true, default-features = false }
 esp-wifi-sys = { version = "0.1.0", path = "../esp-wifi-sys" }
 embassy-sync = { workspace = true, optional = true }
 embassy-futures = { workspace = true, optional = true }
-embassy-net = { workspace = true, optional = true }
 embassy-net-driver = { workspace = true, optional = true }
 
 [features]
@@ -58,7 +57,7 @@ async = [
   "esp32s3-hal?/embassy",
 ]
 
-embassy-net = ["dep:embassy-net", "dep:embassy-net-driver", "async"]
+embassy-net = ["dep:embassy-net-driver", "async"]
 
 # misc features
 coex = []
@@ -77,4 +76,4 @@ mtu-1514 = []
 mtu-1500 = []
 mtu-1492 = []
 mtu-746 = []
-ipv6 = ["smoltcp?/proto-ipv6", "embassy-net?/proto-ipv6"]
+ipv6 = ["smoltcp?/proto-ipv6"]
