--- a/esp32-hal/Cargo.toml
+++ b/esp32-hal/Cargo.toml
@@ -27,9 +27,9 @@ categories = [
 [dependencies]
 embassy-time       = { version = "0.1.1",  features = ["nightly"], optional = true }
 embedded-hal       = { version = "0.2.7",  features = ["unproven"] }
-embedded-hal-1     = { version = "=1.0.0-alpha.10", optional = true, package = "embedded-hal" }
-embedded-hal-async = { version = "0.2.0-alpha.1",   optional = true }
-embedded-hal-nb    = { version = "=1.0.0-alpha.2",  optional = true }
+embedded-hal-1     = { version = "=1.0.0-alpha.11", optional = true, package = "embedded-hal" }
+embedded-hal-async = { version = "=0.2.0-alpha.2",   optional = true }
+embedded-hal-nb    = { version = "=1.0.0-alpha.3",  optional = true }
 esp-hal-common     = { version = "0.10.0",  features = ["esp32"], path = "../esp-hal-common" }
 
 [dev-dependencies]
@@ -99,3 +99,6 @@ required-features = ["embassy", "async"]
 [[example]]
 name              = "embassy_i2c"
 required-features = ["embassy", "async"]
+
+[patch.crates-io]
+embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "46a4600" }
