--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -52,13 +52,13 @@ ufmt-write = { version = "0.1.0", optional = true }
 # IMPORTANT:
 # Each supported device MUST have its PAC included below along with a
 # corresponding feature.
-esp32   = { version = "0.24.0", features = ["critical-section"], optional = true }
+esp32   = { git = "https://github.com/esp-rs/esp-pacs.git", rev = "c72707e", version = "0.24.0", features = ["critical-section"], optional = true }
 esp32c2 = { version = "0.12.0", features = ["critical-section"], optional = true }
-esp32c3 = { version = "0.15.0", features = ["critical-section"], optional = true }
-esp32c6 = { version = "0.5.0",  features = ["critical-section"], optional = true }
-esp32h2 = { version = "0.1.0",  features = ["critical-section"], optional = true }
+esp32c3 = { git = "https://github.com/esp-rs/esp-pacs.git", rev = "c72707e", version = "0.15.0", features = ["critical-section"], optional = true }
+esp32c6 = { git = "https://github.com/esp-rs/esp-pacs.git", rev = "c72707e", version = "0.5.0",  features = ["critical-section"], optional = true }
+esp32h2 = { git = "https://github.com/esp-rs/esp-pacs.git", rev = "c72707e", version = "0.1.0",  features = ["critical-section"], optional = true }
 esp32s2 = { version = "0.15.0", features = ["critical-section"], optional = true }
-esp32s3 = { version = "0.19.0", features = ["critical-section"], optional = true }
+esp32s3 = { git = "https://github.com/esp-rs/esp-pacs.git", rev = "c72707e", version = "0.19.0", features = ["critical-section"], optional = true }
 
 [build-dependencies]
 basic-toml = "0.1.2"
