--- a/esp-hal-common/devices/esp32c2/device.toml
+++ b/esp-hal-common/devices/esp32c2/device.toml
@@ -4,73 +4,51 @@ cores = "single_core"
 
 peripherals = [
     # Peripherals available in the PAC:
-    "aes",
+    "apb_ctrl",
     "apb_saradc",
     "assist_debug",
     "dma",
-    "ds",
     "ecc",
     "efuse",
+    "extmem",
     "gpio",
-    "hmac",
-    "hp_apm",
-    "hp_sys",
     "i2c0",
-    "i2c1",
-    "i2s0",
     "interrupt_core0",
-    "intpri",
     "io_mux",
     "ledc",
-    "lp_ana",
-    "lp_aon",
-    "lp_apm",
-    "lp_clkrst",
-    "lp_peri",
-    "lp_timer",
-    "lp_wdt",
-    "mcpwm0",
-    "mem_monitor",
-    "modem_lpcon",
-    "modem_syscon",
-    "otp_debug",
-    "parl_io",
-    "pau",
-    "pcnt",
-    "pcr",
-    "pmu",
-    "rmt",
     "rng",
-    "rsa",
+    "rtc_cntl",
+    "sensitive",
     "sha",
-    "soc_etm",
     "spi0",
     "spi1",
     "spi2",
+    "system",
     "systimer",
-    "tee",
     "timg0",
-    "timg1",
-    "trace",
-    # "twai0",
     "uart0",
     "uart1",
-    "uhci0",
-    "usb_device",
+    "xts_aes",
+]
 
+symbols = [
     # Additional peripherals defined by us (the developers):
     "adc",
     "assist_debug_sp_monitor",
-    "assist_debug_region_monitor",
     "gdma",
-    "plic",
     "radio",
     "phy",
     "bt",
-    "ieee802154",
+    "wifi",
 
     # ROM capabilities
     "rom_crc_le",
     "rom_crc_be",
-    "rom_md5_bsd",
+    "rom_md5_mbedtls",
+
+    # Wakeup SOC based on ESP-IDF:
+    "pm_support_wifi_wakeup",
+    "pm_support_bt_wakeup",
+    "uart_support_wakeup_int",
+    "gpio_support_deepsleep_wakeup",
 ]
