--- a/esp-hal-common/devices/esp32h2/device.toml
+++ b/esp-hal-common/devices/esp32h2/device.toml
@@ -7,19 +7,16 @@ peripherals = [
     "aes",
     "apb_saradc",
     "assist_debug",
-    "atomic",
     "dma",
     "ds",
     "ecc",
     "efuse",
-    "extmem",
     "gpio",
-    "gpio_sd",
-    "hinf",
     "hmac",
     "hp_apm",
     "hp_sys",
     "i2c0",
+    "i2c1",
     "i2s0",
     "interrupt_core0",
     "intpri",
@@ -28,18 +25,14 @@ peripherals = [
     "lp_ana",
     "lp_aon",
     "lp_apm",
-    "lp_apm0",
     "lp_clkrst",
-    "lp_i2c0",
-    "lp_i2c_ana_mst",
-    "lp_io",
     "lp_peri",
-    "lp_tee",
     "lp_timer",
-    "lp_uart",
     "lp_wdt",
     "mcpwm0",
     "mem_monitor",
+    "modem_lpcon",
+    "modem_syscon",
     "otp_debug",
     "parl_io",
     "pau",
@@ -50,7 +43,6 @@ peripherals = [
     "rng",
     "rsa",
     "sha",
-    "slchost",
     "soc_etm",
     "spi0",
     "spi1",
@@ -60,37 +52,27 @@ peripherals = [
     "timg0",
     "timg1",
     "trace",
-    "twai0",
-    "twai1",
+    # "twai0",
     "uart0",
     "uart1",
     "uhci0",
     "usb_device",
+]
 
+symbols = [
     # Additional peripherals defined by us (the developers):
     "adc",
     "assist_debug_sp_monitor",
     "assist_debug_region_monitor",
     "gdma",
-    "large_intr_status",
     "plic",
     "radio",
     "phy",
     "bt",
-    "wifi",
     "ieee802154",
-    "lp_core",
 
     # ROM capabilities
     "rom_crc_le",
     "rom_crc_be",
     "rom_md5_bsd",
-
-    # Wakeup SOC based on ESP-IDF:
-    "pm_support_wifi_wakeup",
-    "pm_support_beacon_wakeup",
-    "pm_support_bt_wakeup",
-    "gpio_support_deepsleep_wakeup",
-    "uart_support_wakeup_int",
-    "pm_support_ext1_wakeup",
 ]
