--- a/esp-hal-common/devices/esp32s2/device.toml
+++ b/esp-hal-common/devices/esp32s2/device.toml
@@ -1,52 +1,73 @@
 [device]
-arch = "riscv"
+arch  = "xtensa"
 cores = "single_core"
 
 peripherals = [
     # Peripherals available in the PAC:
-    "apb_ctrl",
+    "aes",
     "apb_saradc",
-    "assist_debug",
-    "dma",
-    "ecc",
+    "dedicated_gpio",
+    "ds",
     "efuse",
     "extmem",
     "gpio",
+    "gpio_sd",
+    "hmac",
     "i2c0",
+    "i2c1",
+    "i2s0",
     "interrupt_core0",
     "io_mux",
     "ledc",
+    "pcnt",
+    "pms",
+    "rmt",
     "rng",
+    "rsa",
     "rtc_cntl",
-    "sensitive",
+    "rtc_i2c",
+    "rtc_io",
+    "sens",
     "sha",
     "spi0",
     "spi1",
     "spi2",
+    "spi3",
+    "spi4",
     "system",
     "systimer",
     "timg0",
+    "timg1",
+    "twai0",
     "uart0",
     "uart1",
+    "uhci0",
+    "usb0",
+    "usb_wrap",
     "xts_aes",
+]
 
+symbols = [
     # Additional peripherals defined by us (the developers):
     "adc",
-    "assist_debug_sp_monitor",
-    "gdma",
+    "dac",
+    "pdma",
     "radio",
     "phy",
-    "bt",
     "wifi",
+    "psram",
+    "ulp_riscv_core",
 
     # ROM capabilities
     "rom_crc_le",
-    "rom_crc_be",
-    "rom_md5_mbedtls",
+    "rom_md5_bsd",
 
     # Wakeup SOC based on ESP-IDF:
+    "pm_support_ext0_wakeup",
+    "pm_support_ext1_wakeup",
+    "pm_support_touch_sensor_wakeup",
     "pm_support_wifi_wakeup",
-    "pm_support_bt_wakeup",
     "uart_support_wakeup_int",
-    "gpio_support_deepsleep_wakeup",
+    "ulp_supported",
+    "riscv_coproc_supported",
 ]
