--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,6 +73,8 @@ jobs:
           ldproxy: false
       - uses: Swatinem/rust-cache@v2
 
+      - name: check esp32-hal
+        run: cd esp32-hal/ && cargo check
       # Perform a full build initially to verify that the examples not only
       # build, but also link successfully.
       - name: build esp32-hal (no features)
@@ -107,6 +109,8 @@ jobs:
           components: rust-src
       - uses: Swatinem/rust-cache@v2
 
+      - name: check esp32c62hal
+        run: cd esp32c2-hal/ && cargo +nightly check
       # Perform a full build initially to verify that the examples not only
       # build, but also link successfully.
       # We also use this as an opportunity to verify that the examples link
@@ -149,6 +153,8 @@ jobs:
           components: rust-src
       - uses: Swatinem/rust-cache@v2
 
+      - name: check esp32c3-hal
+        run: cd esp32c3-hal/ && cargo +nightly check
       # Perform a full build initially to verify that the examples not only
       # build, but also link successfully.
       # We also use this as an opportunity to verify that the examples link
@@ -193,6 +199,8 @@ jobs:
           components: rust-src
       - uses: Swatinem/rust-cache@v2
 
+      - name: check esp32c6-hal
+        run: cd esp32c6-hal/ && cargo +nightly check
       # Perform a full build initially to verify that the examples not only
       # build, but also link successfully.
       # We also use this as an opportunity to verify that the examples link
@@ -235,6 +243,8 @@ jobs:
           components: rust-src
       - uses: Swatinem/rust-cache@v2
 
+      - name: check esp32h2-hal
+        run: cd esp32h2-hal/ && cargo +nightly check
       # Perform a full build initially to verify that the examples not only
       # build, but also link successfully.
       # We also use this as an opportunity to verify that the examples link
@@ -277,6 +287,8 @@ jobs:
           ldproxy: false
       - uses: Swatinem/rust-cache@v2
 
+      - name: check esp32s2-hal
+        run: cd esp32s2-hal/ && cargo check
       # Perform a full build initially to verify that the examples not only
       # build, but also link successfully.
       - name: check esp32s2-hal (no features)
@@ -314,6 +326,8 @@ jobs:
           ldproxy: false
       - uses: Swatinem/rust-cache@v2
 
+      - name: check esp32s3-hal
+        run: cd esp32s3-hal/ && cargo check
       # Perform a full build initially to verify that the examples not only
       # build, but also link successfully.
       # We also use this as an opportunity to verify that the examples link
