--- a/esp32c2-hal/Cargo.toml
+++ b/esp32c2-hal/Cargo.toml
@@ -59,6 +59,7 @@ embassy-time-timg0   = ["esp-hal-common/embassy-time-timg0",   "embassy-time/tic
 xtal26mhz            = ["esp-hal-common/esp32c2_26mhz"]
 xtal40mhz            = ["esp-hal-common/esp32c2_40mhz"] 
 interrupt-preemption = ["esp-hal-common/interrupt-preemption"]
+direct-vectoring     = ["esp-hal-common/direct-vectoring"]
 
 [[example]]
 name              = "spi_eh1_loopback"
@@ -91,3 +92,7 @@ required-features = ["embassy", "async"]
 [[example]]
 name              = "embassy_i2c"
 required-features = ["embassy", "async"]
+
+[[example]]
+name = "direct-vectoring"
+required-features = ["direct-vectoring"]
