--- a/esp32s2-hal/Cargo.toml
+++ b/esp32s2-hal/Cargo.toml
@@ -72,6 +72,9 @@ psram_2m  = ["esp-hal-common/psram_2m", "psram"]
 psram_4m  = ["esp-hal-common/psram_4m", "psram"]
 psram_8m  = ["esp-hal-common/psram_8m", "psram"]
 
+[profile.release]
+debug = true
+
 [[example]]
 name              = "spi_eh1_loopback"
 required-features = ["eh1"]
