--- a/esp32s3-hal/Cargo.toml
+++ b/esp32s3-hal/Cargo.toml
@@ -75,6 +75,9 @@ opsram_2m  = ["esp-hal-common/opsram_2m", "psram"]
 opsram_4m  = ["esp-hal-common/opsram_4m", "psram"]
 opsram_8m  = ["esp-hal-common/opsram_8m", "psram"]
 
+[profile.release]
+debug = true
+
 [[example]]
 name              = "spi_eh1_loopback"
 required-features = ["eh1"]
