--- a/esp32s3-hal/Cargo.toml
+++ b/esp32s3-hal/Cargo.toml
@@ -65,6 +65,7 @@ async                = ["esp-hal-common/async"]
 embassy              = ["esp-hal-common/embassy"]
 embassy-time-systick = ["esp-hal-common/embassy-time-systick", "embassy-time/tick-hz-16_000_000"]
 embassy-time-timg0   = ["esp-hal-common/embassy-time-timg0", "embassy-time/tick-hz-1_000_000"]
+frunk_list           = ["esp-hal-common/frunk_list"]
 
 psram     = []
 psram_2m  = ["esp-hal-common/psram_2m", "psram"]
@@ -77,6 +78,9 @@ opsram_8m  = ["esp-hal-common/opsram_8m", "psram"]
 [profile.release]
 debug = true
 
+[[example]]
+name              = "blinky_double_pluck"
+required-features = ["frunk_list"]
 [[example]]
 name              = "spi_eh1_loopback"
 required-features = ["eh1"]
