--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -16,6 +16,7 @@ bitflags             = "2.3.3"
 bitfield             = "0.14.0"
 cfg-if               = "1.0.0"
 critical-section     = "1.1.2"
+defmt                = { version = "=0.3.5", optional = true }
 embedded-can         = { version = "0.4.1", optional = true }
 embedded-dma         = "0.2.0"
 embedded-hal         = { version = "0.2.7", features = ["unproven"] }
@@ -24,7 +25,7 @@ embedded-hal-nb      = { version = "=1.0.0-rc.1", optional = true }
 embedded-io          = "0.5.0"
 esp-synopsys-usb-otg = { version = "0.3.2", optional = true, features = ["fs", "esp32sx"] }
 fugit                = "0.3.7"
-log                  = "0.4.20"
+log                  = { version = "0.4.20", optional = true }
 lock_api             = { version = "0.4.10", optional = true }
 nb                   = "1.1.0"
 paste                = "1.0.14"
@@ -131,4 +132,16 @@ debug = [
     "esp32h2?/impl-register-debug",
     "esp32s2?/impl-register-debug",
     "esp32s3?/impl-register-debug",
+]
+
+log = ["dep:log"]
+defmt = [
+    "dep:defmt",
+    "embassy-executor?/defmt",
+    "embassy-sync?/defmt",
+    "embassy-time?/defmt",
+    "embassy-futures?/defmt",
+    "embedded-hal-1?/defmt-03",
+    "embedded-io/defmt-03",
+    "embedded-io-async?/defmt-03",
 ]
