--- a/esp32s3-hal/Cargo.toml
+++ b/esp32s3-hal/Cargo.toml
@@ -42,9 +42,9 @@ embedded-hal-async = "=1.0.0-rc.1"
 embedded-can       = "0.4.1"
 embedded-io-async  = "0.5.0"
 esp-alloc          = "0.3.0"
-esp-backtrace      = { version = "0.7.0", features = ["esp32s3", "panic-handler", "exception-handler", "print-uart"] }
+esp-backtrace      = { version = "0.8.0", features = ["esp32s3", "panic-handler", "exception-handler", "print-uart"] }
 esp-hal-smartled   = { version = "0.4.0", features = ["esp32s3"], path = "../esp-hal-smartled" }
-esp-println        = { version = "0.5.0", features = ["esp32s3", "log"] }
+esp-println        = { version = "0.6.0", features = ["esp32s3", "log"] }
 heapless           = "0.7.16"
 hmac               = { version = "0.12.1", default-features = false }
 lis3dh-async       = { git = "https://github.com/jessebraham/lis3dh-rs-async", branch = "feature/eh-rc1" }
@@ -78,6 +78,9 @@ psram_8m  = ["esp-hal-common/psram_8m", "psram"]
 opsram_2m  = ["esp-hal-common/opsram_2m", "psram"]
 opsram_4m  = ["esp-hal-common/opsram_4m", "psram"]
 opsram_8m  = ["esp-hal-common/opsram_8m", "psram"]
+
+log = ["esp-hal-common/log"]
+defmt = ["esp-hal-common/defmt"]
 
 [profile.release]
 debug = true
