--- a/esp32c2-hal/Cargo.toml
+++ b/esp32c2-hal/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name    = "esp32c2-hal"
-version = "0.9.0"
+version = "0.10.0"
 authors = [
     "Jesse Braham <jesse@beta7.io>",
     "Björn Quentin <bjoern.quentin@mobile-j.de>",
@@ -25,8 +25,8 @@ categories = [
 ]
 
 [dependencies]
-esp-hal-common = { version = "0.11.0", features = ["esp32c2"], path = "../esp-hal-common" }
-embassy-time   = { version = "0.1.3", features = ["nightly"], optional = true }
+esp-hal-common = { version = "0.12.0", features = ["esp32c2"], path = "../esp-hal-common" }
+embassy-time   = { version = "0.1.3",  features = ["nightly"], optional = true }
 
 [dev-dependencies]
 critical-section   = "1.1.2"
@@ -38,30 +38,31 @@ embedded-io-async  = "0.5.0"
 esp-backtrace      = { version = "0.8.0", features = ["esp32c2", "panic-handler", "exception-handler", "print-uart"] }
 esp-println        = { version = "0.6.0", features = ["esp32c2", "log"] }
 heapless           = "0.7.16"
-lis3dh-async       = { git = "https://github.com/jessebraham/lis3dh-rs-async", branch = "feature/eh-rc1" }
+lis3dh-async       = "0.8.0"
 sha2               = { version = "0.10.7", default-features = false}
-ssd1306            = "0.8.0"
+ssd1306            = "0.8.1"
 static_cell        = { version = "1.2.0", features = ["nightly"] }
 
 [features]
 default              = ["rt", "vectored", "xtal40mhz"]
+async                = ["esp-hal-common/async"]
 debug                = ["esp-hal-common/debug"]
+defmt                = ["esp-hal-common/defmt"]
 direct-boot          = ["esp-hal-common/rv-init-data"]
+direct-vectoring     = ["esp-hal-common/direct-vectoring"]
 eh1                  = ["esp-hal-common/eh1"]
+interrupt-preemption = ["esp-hal-common/interrupt-preemption"]
+log                  = ["esp-hal-common/log"]
 rt                   = []
 ufmt                 = ["esp-hal-common/ufmt"]
 vectored             = ["esp-hal-common/vectored"]
-async                = ["esp-hal-common/async"]
+xtal26mhz            = ["esp-hal-common/esp32c2_26mhz"]
+xtal40mhz            = ["esp-hal-common/esp32c2_40mhz"] 
+
+# Embassy support
 embassy              = ["esp-hal-common/embassy"]
 embassy-time-systick = ["esp-hal-common/embassy-time-systick", "embassy-time/tick-hz-16_000_000"]
 embassy-time-timg0   = ["esp-hal-common/embassy-time-timg0",   "embassy-time/tick-hz-1_000_000"]
-xtal26mhz            = ["esp-hal-common/esp32c2_26mhz"]
-xtal40mhz            = ["esp-hal-common/esp32c2_40mhz"] 
-interrupt-preemption = ["esp-hal-common/interrupt-preemption"]
-direct-vectoring     = ["esp-hal-common/direct-vectoring"]
-
-log = ["esp-hal-common/log"]
-defmt = ["esp-hal-common/defmt"]
 
 [profile.release]
 debug = true
