--- a/esp32s2-hal/Cargo.toml
+++ b/esp32s2-hal/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name    = "esp32s2-hal"
-version = "0.11.0"
+version = "0.12.0"
 authors = [
     "Jesse Braham <jesse@beta7.io>",
     "Björn Quentin <bjoern.quentin@mobile-j.de>",
@@ -25,14 +25,14 @@ categories = [
 ]
 
 [dependencies]
-esp-hal-common               = { version = "0.11.0", features = ["esp32s2"], path = "../esp-hal-common" }
-embassy-time                 = { version = "0.1.3", features = ["nightly"], optional = true }
+esp-hal-common               = { version = "0.12.0", features = ["esp32s2"], path = "../esp-hal-common" }
+embassy-time                 = { version = "0.1.3",  features = ["nightly"], optional = true }
 xtensa-atomic-emulation-trap = "0.4.0"
 
 [dev-dependencies]
 aes                = "0.8.3"
 critical-section   = "1.1.2"
-crypto-bigint      = { version = "0.5.2", default-features = false }
+crypto-bigint      = { version = "0.5.3", default-features = false }
 embassy-executor   = { version = "0.3.0", features = ["nightly"] }
 embassy-sync       = "0.2.0"
 embedded-graphics  = "0.8.1"
@@ -41,43 +41,44 @@ embedded-hal-async = "=1.0.0-rc.1"
 embedded-io-async  = "0.5.0"
 esp-alloc          = "0.3.0"
 esp-backtrace      = { version = "0.8.0", features = ["esp32s2", "panic-handler", "print-uart", "exception-handler"] }
-esp-hal-smartled   = { version = "0.4.0", features = ["esp32s2"], path = "../esp-hal-smartled" }
+esp-hal-smartled   = { version = "0.5.0", features = ["esp32s2"], path = "../esp-hal-smartled" }
 esp-println        = { version = "0.6.0", features = ["esp32s2", "log"] }
 heapless           = "0.7.16"
 hmac               = { version = "0.12.1", default-features = false }
-lis3dh-async       = { git = "https://github.com/jessebraham/lis3dh-rs-async", branch = "feature/eh-rc1" }
+lis3dh-async       = "0.8.0"
 sha2               = { version = "0.10.7", default-features = false }
 smart-leds         = "0.3.0"
-ssd1306            = "0.8.0"
+ssd1306            = "0.8.1"
 static_cell        = { version = "1.2.0", features = ["nightly"] }
 usb-device         = "0.2.9"
 usbd-serial        = "0.1.1"
 
 [features]
 default   = ["rt", "vectored"]
+async     = ["esp-hal-common/async"]
 debug     = ["esp-hal-common/debug"]
+defmt     = ["esp-hal-common/defmt"]
 eh1       = ["esp-hal-common/eh1"]
+log       = ["esp-hal-common/log"]
 rt        = []
 ufmt      = ["esp-hal-common/ufmt"]
 vectored  = ["esp-hal-common/vectored"]
-async     = ["esp-hal-common/async"]
-embassy   = ["esp-hal-common/embassy"]
+
+# Embassy support
+embassy = ["esp-hal-common/embassy"]
 # FIXME:
 # - add 80_000_000 support to embassy time
 # - Fix https://github.com/esp-rs/esp-hal/issues/253
 # embassy-time-systick = ["esp-hal-common/embassy-time-systick", "embassy-time/tick-hz-1_000_000"] 
-embassy-time-timg0 = ["esp-hal-common/embassy-time-timg0", "embassy-time/tick-hz-1_000_000"]
-
-embassy-executor-thread    = ["esp-hal-common/embassy-executor-thread"]
+embassy-time-timg0         = ["esp-hal-common/embassy-time-timg0", "embassy-time/tick-hz-1_000_000"]
 embassy-executor-interrupt = ["esp-hal-common/embassy-executor-interrupt"]
+embassy-executor-thread    = ["esp-hal-common/embassy-executor-thread"]
 
+# PSRAM support
 psram     = []
 psram_2m  = ["esp-hal-common/psram_2m", "psram"]
 psram_4m  = ["esp-hal-common/psram_4m", "psram"]
 psram_8m  = ["esp-hal-common/psram_8m", "psram"]
-
-log = ["esp-hal-common/log"]
-defmt = ["esp-hal-common/defmt"]
 
 [profile.release]
 debug = true
