Add support for splitting esp32 uart into TX and RX
* Keeps existing API for uart, but wraps it in Tx and Rx sub-types
* Adds split() method similar to embassy-rs nRF/stm32/rp for getting indepdendent TX and RX
parts
* Implements e-h traits for TX and RX types
* Add esp32s3 example

--- a/esp32s3-hal/Cargo.toml
+++ b/esp32s3-hal/Cargo.toml
@@ -133,6 +133,10 @@ name              = "embassy_serial"
 required-features = ["embassy", "embassy-executor-thread", "async"]
 
 [[example]]
+name              = "embassy_serial_split"
+required-features = ["embassy", "async"]
+
+[[example]]
 name              = "embassy_i2c"
 required-features = ["embassy", "embassy-executor-thread", "async"]
 
