declare new examples

--- a/esp32h2-hal/Cargo.toml
+++ b/esp32h2-hal/Cargo.toml
@@ -97,6 +97,10 @@ name              = "embassy_serial"
 required-features = ["async", "embassy"]
 
 [[example]]
+name              = "embassy_serial_split"
+required-features = ["async", "embassy"]
+
+[[example]]
 name              = "embassy_spi"
 required-features = ["async", "embassy"]
 
