--- a/esp32c3-hal/Cargo.toml
+++ b/esp32c3-hal/Cargo.toml
@@ -115,5 +115,13 @@ name              = "embassy_rmt_rx"
 required-features = ["embassy", "async"]
 
 [[example]]
+name              = "embassy_i2s_sound"
+required-features = ["embassy", "async"]
+
+[[example]]
+name              = "embassy_i2s_read"
+required-features = ["embassy", "async"]
+
+[[example]]
 name = "direct-vectoring"
 required-features = ["direct-vectoring"]
